# -

./: .gitignore  CONTEXT.md  README.md  main.py  pyproject.toml
.claude/skills/teach/: MISSION.md  NOTES.md  RESOURCES.md
.github/workflows/: ci.yml
plans/stage1/: 01-target-variable-and-data-loading.md  02-data-cleaning-and-column-exclusion.md  03-q3-major-mapping.md  04-feature-encoding-and-aggregation.md  05-modeling-pipeline-training-and-evaluation.md  06-pca-dimensionality-reduction-visualization.md  07-feature-importance-analysis.md  08-shap-deep-analysis.md  index.md  state.json
plans/stage2/: exec.md  state.json
ppt/: AIGC使用频率影响因素研究.pptx
prd/: aigc-usage-frequency-classification.md
projects/aigc_usage_classification_ppt169_20260616/: README.md  design_spec.md  image_analysis.csv  spec_lock.md
projects/aigc_usage_classification_ppt169_20260616/confirm_ui/: recommendations.json  result.json
projects/aigc_usage_classification_ppt169_20260616/notes/: 01_封面.md  02_研究背景与核心问题.md  03_核心结论总览.md  04_数据概况.md  05_标签构造与数据清洗.md  06_实验设计与方法论.md  07_多模型对比.md  08_模型诊断.md  09_超参数调优.md  10_因子分析.md  11_SHAP可解释性.md  12_PCA降维可视化.md  13_结论与启示.md  14_致谢.md  total.md
ralph/: afk.sh  data.py  importance.py  once.sh  prompt.md
slides/: AIGC_usage_presentation.pptx  build.js  package-lock.json
src/: experiments.py  model.py  pca.py  shap_analysis.py  utils.py
tests/: test_data.py  test_experiments.py  test_importance.py  test_main.py  test_model.py  test_pca.py  test_shap_analysis.py  test_utils.py
tests/test_e2e/: test_pipeline.py
(+3 files in other folders)
